Fixed: BigPromo block now overflow hidden

--- a/src/components/Ecommerce/styles.module.scss
+++ b/src/components/Ecommerce/styles.module.scss
@@ -1,6 +1,7 @@
 .block {
   background-color: white;
   border-radius: 6px;
+  overflow: hidden;
 }
 
 .information {
